vm-create/RHEL/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "vmName": {
        "type": "string",
        "metadata": "Name of the virtual machine."
      },
      "vmSize": {
        "type": "string",
        "defaultValue": "Standard_B2s",
        "allowedValues": [
          "Standard_B1ms",
          "Standard_B2s",
          "Standard_B2ms"
        ],
        "metadata": {
          "description": "Size of the virtual machine."
        }
      },
      "imageSKU": {
        "type": "string",
        "allowedValues": [
          "8",
          "7.7",
          "7.6",
          "7.5",
          "6.10",
          "6.9",
          "6.8"
        ],
        "metadata": {
          "description": "The Windows version for the VM. This will pick a fully patched image of this given Windows version."
        }
      },
      "adminUsername": {
        "type": "string",
        "metadata": {
          "description": "Username for the Virtual Machine."
        }
      },
      "adminPassword": {
        "type": "securestring",
        "metadata": {
          "description": "Password for the Virtual Machine."
        }
      },
      "virtualNetworkResourceGroup": {
        "type": "string",
        "metadata": "Resource group where the virtual network is located."
      },
      "virtualNetworkName": {
        "type": "string",
        "metadata": "VM Deployment destination Virtual Network Name."
      },
      "subnetName": {
        "type": "string",
        "metadata": "VM Deployment destination Subnet Name."
      }
    },
    "variables": {
      "location": "[resourceGroup().location]",
      "nicName": "[concat(parameters('vmName'), '-nic')]",
      "publicIPAddressName": "[concat(parameters('vmName'), '-pip')]",
      "subnetRef": "[resourceId(subscription().subscriptionId, parameters('virtualNetworkResourceGroup'), 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnetName'))]",
      "networkSecurityGroupName": "[concat(parameters('vmName'), '-nsg')]"
    },
    "resources": [
      {
        "type": "Microsoft.Network/publicIPAddresses",
        "apiVersion": "2018-11-01",
        "name": "[variables('publicIPAddressName')]",
        "location": "[variables('location')]",
        "properties": {
          "publicIPAllocationMethod": "Dynamic"
        }
      },
      {
        "comments":  "Default Network Security Group for template",
        "type":  "Microsoft.Network/networkSecurityGroups",
        "apiVersion":  "2019-08-01",
        "name":  "[variables('networkSecurityGroupName')]",
        "location":  "[variables('location')]",
        "properties": {
          "securityRules": [
            {
              "name":  "Allow-SSH-From-CompanyA",
              "properties": {
                "priority":  1000,
                "access":  "Allow",
                "direction":  "Inbound",
                "destinationPortRange":  "22",
                "protocol":  "Tcp",
                "sourcePortRange":  "*",
                "sourceAddressPrefix":  "xxx.xxx.xxx.xxx/32",
                "destinationAddressPrefix":  "*"
              }
            },
            {
              "name":  "Allow-SSH-From-CompanyB",
              "properties": {
                "priority":  1100,
                "access":  "Allow",
                "direction":  "Inbound",
                "destinationPortRange":  "22",
                "protocol":  "Tcp",
                "sourcePortRange":  "*",
                "sourceAddressPrefix":  "yyy.yyy.yyy.yyy/32",
                "destinationAddressPrefix":  "*"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2018-11-01",
        "name": "[variables('nicName')]",
        "location": "[variables('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        ],
        "properties": {
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
          },
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
                },
                "subnet": {
                  "id": "[variables('subnetRef')]"
                }
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachines",
        "apiVersion": "2018-10-01",
        "name": "[parameters('vmName')]",
        "location": "[variables('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
        ],
        "properties": {
          "hardwareProfile": {
            "vmSize": "[parameters('vmSize')]"
          },
          "osProfile": {
            "computerName": "[parameters('vmName')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "RedHat",
              "offer": "RHEL",
              "sku": "[parameters('imageSKU')]",
              "version": "latest"
            },
            "osDisk": {
              "name": "[concat(parameters('vmName'), '-OsDisk')]",
              "caching": "ReadWrite",
              "createOption": "FromImage",
              "managedDisk": {
                "storageAccountType": "StandardSSD_LRS"
              }
            }
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
              }
            ]
          }
        }
      }
    ]
  }
